# asrtk

./: .cookiecutter.json  .gitignore  LICENSE  README.md  noxfile.py  number_stats.txt  process_dirs.cmd  process_dirs_flat.cmd  punctation_restore_tr.ipynb  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
docs/: changelog.md  cli.md  conf.py
notebooks/: Test_datasets.ipynb  Test_labels.ipynb  WER-benchmark_batch.ipynb  create_dataset_gecici.py  create_dataset_lq_split_icin.ipynb  create_dataset_split_icin.ipynb  create_subs.ipynb  download_datasets.ipynb  filter_PleIAs_YouTube_Commons.ipynb  punctation_restore_tr-1.ipynb  punctation_restore_tr-2.ipynb  punctation_restore_tr.ipynb  wav-to-opus.ipynb  ytu-ce-cosmos.ipynb  ytu-ce-cosmos_2.ipynb
references/: datasets.md
scripts/: analyze_commonvoice.py  analyze_leaks.py  cleanup_unpaired_files.py  download_commonvoice.py  download_dataset.py  optimum_convert.py  truncate_metadata.py
src/asrtk/: __init__.py  __main__.py  cli.py  downloader.py  normalizer.py  ordinals.py  player.py  speakers.py  subs.py  utils.py  variables.py
src/asrtk/align/: aligner.py
src/asrtk/cli/: __init__.py  main.py
src/asrtk/cli/commands/: __init__.py  abbreviations.py  charset.py  chunk.py  convert.py  download.py  duplicates.py  find.py  fix.py  fix_timestamps.py  line_endings.py  merge.py  number_analyzer.py  numbers.py  patch.py  remove.py  scaffold.py  split.py  trim.py  wordset.py
src/asrtk/core/: __init__.py  correction.py  text.py  vtt.py
src/asrtk/utils/: __init__.py  audio_utils.py  console.py  file.py  text.py
tests/: __init__.py  test_asrtk.py
